--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "tsc && cucumber-js -p profile"
+    "test:bdd": "cucumber-js -p profile",
+    "test:tdd": "jest --watchAll"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/cucumber": "^6.0.1",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -18,7 +20,9 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.5.1",
     "prettier": "^2.0.5",
+    "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
   }
