--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "sourceMap": true,
     "esModuleInterop": true
   },
-  "exclude": ["node_modules", "build", "scripts"]
+  "exclude": ["node_modules", "build", "scripts", "**/*.spec.ts"]
 }
