--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test:bdd": "cucumber-js -p profile",
-    "test:tdd": "jest --watchAll"
+    "test:tdd": "jest",
+    "test": "yarn test:tdd && yarn test:bdd"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
